[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/anima/fonts/Lato-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/anima/ui/animation_data.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=4]
size = 18
use_filter = true
font_data = ExtResource( 1 )

[node name="Control" type="VBoxContainer"]
anchor_right = 1.0
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 1024.0
margin_bottom = 28.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer"]
margin_top = 3.0
margin_right = 160.0
margin_bottom = 25.0
rect_min_size = Vector2( 160, 0 )
custom_fonts/font = SubResource( 4 )
text = "Animation type:"

[node name="AnimationTypeButton" type="OptionButton" parent="GridContainer"]
margin_left = 164.0
margin_right = 1024.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = SubResource( 4 )
text = "Animation"
items = [ "Animation", null, false, 0, null, "Property", null, false, 1, null ]
selected = 0

[node name="AnimationContainer" type="GridContainer" parent="."]
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 60.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationLabel" type="Label" parent="AnimationContainer"]
margin_top = 3.0
margin_right = 160.0
margin_bottom = 25.0
rect_min_size = Vector2( 160, 0 )
custom_fonts/font = SubResource( 4 )
text = "Animation:"

[node name="AnimationButton" type="Button" parent="AnimationContainer"]
margin_left = 164.0
margin_right = 1024.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Select animation..."

[node name="PropertyContainer" type="GridContainer" parent="."]
visible = false
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 92.0
columns = 2

[node name="PropertyLabel" type="Label" parent="PropertyContainer"]
margin_top = 3.0
margin_right = 160.0
margin_bottom = 25.0
rect_min_size = Vector2( 160, 0 )
custom_fonts/font = SubResource( 4 )
text = "Property:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PropertyButton" type="Button" parent="PropertyContainer"]
margin_left = 164.0
margin_right = 1024.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Select property to animate..."

[node name="HSeparator2" type="HSeparator" parent="."]
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 68.0

[connection signal="item_selected" from="GridContainer/AnimationTypeButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="AnimationContainer/AnimationButton" to="." method="_on_AnimationButton_pressed"]
[connection signal="pressed" from="PropertyContainer/PropertyButton" to="." method="_on_PropertyButton_pressed"]
